refactor html in admin

--- a/app/templates/admin/user_management/add_user.html
+++ b/app/templates/admin/user_management/add_user.html
@@ -153,7 +153,7 @@
                         <h1 class="modal-title fs-5">Error</h1>
                     </div>
                     <div class="modal-body">
-                        Error in adding user! A user with the same username already exists.
+                        Unable to add user. An aaccount with the provided details already exists.
                     </div>
                     <a href="{{ url_for('admin.add_user') }}">
                         <div class="modal-footer">
