--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -160,7 +160,7 @@
                         <h1 class="modal-title fs-5">Success</h1>
                     </div>
                     <div class="modal-body">
-                        Patient information updated successfully!
+                        User information updated successfully!
                     </div>
                     <a href="{{ url_for('admin.user_info', user_id=user[0]) }}">
                         <div class="modal-footer">
@@ -179,7 +179,7 @@
                         <h1 class="modal-title fs-5">Error</h1>
                     </div>
                     <div class="modal-body">
-                        Error in saving changes for patient information!
+                        Error in saving changes for user information!
                     </div>
                     <a href="{{ url_for('admin.user_info', user_id=user[0]) }}">
                         <div class="modal-footer">
