--- a/app/templates/admin/user_management/user_info.html
+++ b/app/templates/admin/user_management/user_info.html
@@ -74,15 +74,15 @@
                 <div class="u_row firstRow">
 
                     <div class="inputBox fName">
-                        <input type="text" required="required" name="first_name" value="{{ user[3] }}" disabled>
+                        <input type="text" required="required" name="first_name" value="{{ user[3] }}" oninput="capitalizeFirstLetter(this)" disabled>
                         <span>FIRST NAME</span>
                     </div>
                     <div class="inputBox mName">
-                        <input type="text" required="required" name="middle_name" value="{{ user[4] }}" disabled>
+                        <input type="text" required="required" name="middle_name" value="{{ user[4] }}" oninput="capitalizeFirstLetter(this)" disabled>
                         <span>MIDDLE NAME</span>
                     </div>
                     <div class="inputBox lName">
-                        <input type="text" required="required" name="last_name" value="{{ user[5] }}" disabled>
+                        <input type="text" required="required" name="last_name" value="{{ user[5] }}" oninput="capitalizeFirstLetter(this)" disabled>
                         <span>LAST NAME</span>
                     </div>
                     
@@ -108,7 +108,7 @@
 
                     <div class="inputBox email">
                         <input type="email" name="email" autocomplete="off" value="{{ user[6] }}" disabled>
-                        <span>Email</span>
+                        <span>EMAIL</span>
                     </div>
                     
                     <div class="inputBox gender">
@@ -117,7 +117,7 @@
                             <option value="male" {% if user[7] == "male" %} selected {% endif %}>Male</option>
                             <option value="female" {% if user[7] == "female" %} selected {% endif %}>Female</option>
                         </select>
-                        <span>Gender</span>
+                        <span>GENDER</span>
                     </div>
 
                     <div class="inputBox user_role">
@@ -128,7 +128,7 @@
                             <option value="medtech" {% if user[8] == "medtech" %} selected {% endif %}>Medtech</option>
                             <option value="admin" {% if user[8] == "admin" %} selected {% endif %}>Admin</option>
                         </select>
-                        <span>User Role</span>
+                        <span>USER ROLE</span>
                     </div>
 
                 </div>
@@ -256,6 +256,17 @@
             }
         }
 
+        function capitalizeFirstLetter(input) {
+
+            let inputValue = input.value;
+
+            let capitalizedValue = inputValue.replace(/\b\w/g, function (match) {
+                return match.toUpperCase();
+            });
+
+            input.value = capitalizedValue;
+            }
+            
     </script>
 
 {% endblock %}
