--- a/app/static/login_style.css
+++ b/app/static/login_style.css
@@ -6,118 +6,145 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Inter', sans-serif;
+}
+
+.login_bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100vh;
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+}
+
+/* body {  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #DFF1FF ;
     font-family: 'Inter', sans-serif;
 
-}
+} */
 
 .login-form {  
-    width: 450px;
-    height: 400px;
-    flex-shrink: 0;
-    border-radius: 30px;
+    position: relative;
+    margin-top: 5%;
+    width: 360px;
+    height: 350px;
     text-align: center;
-    background: #ffffff;
-    box-shadow: 0px 5px 20px 0px rgba(2, 119, 189, 0.60);
-    margin: 5% 25% 5% 25%;
-    
+    border: 1px solid #dce2e7;;
 }
 
 .login-button {
-    width: 100px;
+    position: relative;
+    width: 90px;
     height: 38px;
-    flex-shrink: 0;
     border-radius: 5px;
     text-align: center;
     background: var(--blueA);
     border: none; 
     color: #fff; 
-    font-size: 16px; 
+    font-size: 15px; 
     cursor: pointer;
     transition: background 0.3s;
 }
 
 .login-button:hover {
-    background: #01579B; 
+    background: #0b8bd5; 
 }
 
 .container {
-    text-align: center;
+    position: relative;
     justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .container-2 {
+    position: relative;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 60px;
 }
 
 .margin-tb {
+    position: relative;
     display: inline-block;
-    margin-top: 40px ;
-    margin-bottom: 40px;
+    margin-top: 35px ;
+    margin-bottom: 25px;
 }
 
 .margin-t {
+    position: relative;
     display: inline-block;
-    margin-top: 10px ;
+    margin-top: 25px ;
 }
 .doc {
+    position: relative;
     color: #000;
-    font-size: 32px;
+    font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
 .care {
+    position: relative;
     color: var(--blueA);
-    font-size: 32px;
+    font-size: 25px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
 
-.title {
-    color: var(--darkBlue);
-    font-family: Inter;
-    font-size: 15px;
-    font-style: normal;
+/* input box styles */
+.form_input {
+    position: relative;
+    width: 450px;
+}
+
+.disabled-form_input {
+    position: relative;
+    width: 450px;
+}
+
+.form_input input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccd7e0;
+    outline-color: var(--blueA);
+    border-radius: 5px;
+    font-size: 1em;  
+}
+
+.form_input span {
+    position: absolute;
+    top: -8px;
+    left: 15px;
+    padding: 0 10px;
+    background: white;
+    color: #707c86;
     font-weight: 900;
-    line-height: normal;
-    display: block;
-    margin-bottom: 8px;
-    text-align: left;
-    margin-left: 55px;
+    font-size: 0.70em;
 }
 
-.form-input {
-    width: 338px;
-    height: 45px;
-    flex-shrink: 0;
-    border-radius: 11px;
-    background-color: white;
-    /* border-bottom: 2px solid var(--blueA) !important;
-    border: var(--blueC); */
-    border: 2px solid var(--blueB);
-    background: #FFF;
-    padding: 8px;
-    box-sizing: border-box;
+.form_input input:focus {
+    color: #6C757D; 
+    outline: 0;
+    box-shadow: 0 0 0.5rem 0 rgb(199, 207, 215);
 }
 
-.form-input:active,
-.form-input:focus {
-    outline: none; 
-    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1) 
-    /* border-bottom: 2px solid var(--blueA);  */
-    /* box-shadow: 0 4px 6px -1px rgba(163, 213, 255, 1); */
-}
-
-.form-group {
-    margin-bottom: 20px;
-    display: block;
+.form_input.login {
+    position: relative;
+    width: 300px;
+    margin-top: 20px;
 }
 
 .app-info {
+    position: relative;
     display: block;
     font-family: Inter;
     font-size: 14px;
@@ -129,7 +156,8 @@ body {
 
 .flash-messages {
     text-align: center;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 5px;
     color: red;  
     font-family: Inter;
     font-size: 12px;
