--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,23 +3,26 @@
 {% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='login_style.css') }}"> {% endblock %}
 
 {% block content %}
+
+    <!-- <img class="login_bg" src="{{ url_for('static', filename='/images/DocCare Login.png') }}">  -->
+
     <form class="login-form" id="login-form" method="POST" action="{{ url_for('login') }}">
         <div class="container margin-tb">
             <span class="doc">Doc</span><span class="care">Care</span>
         </div>
 
-        <div class="container padding">
-            <div class="form-group">
-                <label class="title" for="username">USERNAME</label>
+        <center>
+            <div class="form_input login">
                 <input type="text" name="username" id="username" class="form-input" autocomplete="off" required>
+                <span>USERNAME</span>
             </div>
-        
-            <div class="form-group">
-                <label class="title" for="password">PASSWORD</label>
+            
+            <div class="form_input login">
                 <input type="password" name="password" id="password" class="form-input" autocomplete="off" required>
+                <span>PASSWORD</span>
             </div>
-        </div>
-
+        </center>
+            
         <div class="flash-messages">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
