--- a/app/templates/doctor/patient/add_clearance.html
+++ b/app/templates/doctor/patient/add_clearance.html
@@ -79,6 +79,16 @@
                 </li>
             </ul>
         </div>
+
+        <div class="grid_container history">
+            <div class="grid_item">
+
+            </div>
+
+            <div class="grid_item">
+                
+            </div>
+        </div>
     </main>
 
 {% endblock %}
