--- a/app/static/admin_style.css
+++ b/app/static/admin_style.css
@@ -193,15 +193,56 @@
 
 /* Input boxes */
 .inputBox.username, .inputBox.password {
-    width: 550px;
+    width: 460px;
 }
 
 .gender, .user_role {
-    width: 400px;
+    width: 305px;
 }
 
-.inputBox.fName, .inputBox.mName, .inputBox.lName , .inputBox.email{
+.inputBox.fName, .inputBox.mName, .inputBox.lName , .inputBox.email {
     width: 300px;
+}
+
+.edit_email {
+    width: 460px;
+}
+
+.edit_user_role {
+    width: 470px;
+}
+
+.edit_gender {
+    width: 450px;
+}
+
+.inputBox.edit_password {
+    margin-top: 30px;
+    width: 500px;
+}
+
+.inputBox.edit_password input {
+    border: 2px solid #e3e4e5;
+}
+
+.inputBox.edit_password span {
+    color: #8f979e;
+}
+
+.reset_pass {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 160px;
+    width: 72%;
+    border: 1px solid #e9ebef;
+    margin-top: 40px;
+    height: 100px;
+}
+
+.med-header.admin {
+    margin-top: 10px;
+    width: 930px;
 }
 
 /* dropdown styles */
@@ -233,34 +274,31 @@ input, select {
 
 .u_row.thirdRow {
     gap: 10px;
-    margin-bottom: 50px; 
-
 }
 
 .btn-new-pass {
+    position: relative;
+    margin-top: 30px;
     color: white;
-    background-color: var(--blueD);
+    background-color: #e3e4e5;
+    color: #8f979e;
     border: none;
     border-radius: 5px;
-    width: 230px;
+    width: 180px;
     height: 40px;
-    font-size: 16px;
+    font-size: 14px;
     cursor: pointer;
-    margin: 10px 20px;
 }
 
 .flash-message {
-    position: absolute;
-    top: 0;  
+    position: relative;
     left: 0; 
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border: 1px solid #4CAF50;
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 5px;
+    width: 72%;
+    padding: 15px;
+    margin-top: 20px;
+    background-color: #C1E1C1;
+    font-weight: 900;
+    color: #355E3B;
     text-align: center;
     box-sizing: border-box; 
-    z-index: 1;
 }
