--- a/app/static/login_style.css
+++ b/app/static/login_style.css
@@ -1,54 +1,41 @@
 @import "base_style.css";
 
 /* -------------------------------------------- LOGIN -------------------------------------------- */
-body {  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Inter', sans-serif;
+.grid_container {
+    position: fixed;
+    display: grid;
+    grid-template-columns: 630px auto;
+    height: 100vh;
+}
+
+.grid_item {
+    padding: 60px;
 }
 
 .login_bg {
     position: fixed;
-    top: 0;
-    left: 0;
     width: 100%; 
-    height: 100vh;
-    margin: 0;
-    background-size: cover;
-    background-position: center;
+    height: 100%;
 }
 
-/* body {  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #DFF1FF ;
-    font-family: 'Inter', sans-serif;
-
-} */
-
-.login-form {  
+.login_form {  
     position: relative;
-    margin-top: 5%;
-    width: 360px;
-    height: 350px;
+    background-color: #dcf1ff8e;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    border: 1px solid #dce2e7;;
 }
 
 .login-button {
     position: relative;
-    width: 90px;
-    height: 38px;
+    width: 100px;
+    height: 35px;
     border-radius: 5px;
     text-align: center;
     background: var(--blueA);
     border: none; 
     color: #fff; 
-    font-size: 15px; 
+    font-size: 14px; 
     cursor: pointer;
     transition: background 0.3s;
 }
@@ -57,24 +44,22 @@ body {
     background: #0b8bd5; 
 }
 
-.container {
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-}
-
 .container-2 {
     position: relative;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 70px;
+}
+
+.margin-tb img {
+    width: 30px;
+    margin-right: 5px;
 }
 
 .margin-tb {
     position: relative;
     display: inline-block;
-    margin-top: 35px ;
-    margin-bottom: 25px;
+    margin-top: 10%;
+    margin-bottom: 50px;
 }
 
 .margin-t {
@@ -118,36 +103,43 @@ body {
     outline-color: var(--blueA);
     border-radius: 5px;
     font-size: 1em;  
+    color: #535353; 
 }
 
 .form_input span {
     position: absolute;
-    top: -8px;
-    left: 15px;
+    left: 0;
+    padding: 11px;
+    pointer-events: none;
+    font-size: 13px;
+    transition: 0.5s;
+}
+
+.form_input input:focus ~ span,
+.form_input input:valid ~ span {
+    color: #535353;
+    transform: translateX(0px) translateY(-18px);
+    font-size: 0.65em;
     padding: 0 10px;
-    background: white;
-    color: #707c86;
-    font-weight: 900;
-    font-size: 0.70em;
 }
 
 .form_input input:focus {
-    color: #6C757D; 
+    color: #535353;
     outline: 0;
     box-shadow: 0 0 0.5rem 0 rgb(199, 207, 215);
 }
 
 .form_input.login {
     position: relative;
-    width: 300px;
-    margin-top: 20px;
+    width: 330px;
+    margin-top: 25px;
 }
 
 .app-info {
     position: relative;
     display: block;
     font-family: Inter;
-    font-size: 14px;
+    font-size: 11px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
