--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -90,6 +90,66 @@
                                     <td>Added a new patient</td>
                                     <td>Patient added successfully</td>
                                 </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
+                                <tr>
+                                    <td>2023-12-08 12:31:16</td>
+                                    <td>@doctor</td>
+                                    <td>Added a new patient</td>
+                                    <td>Patient added successfully</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
