--- a/app/templates/doctor/patient/prescription.html
+++ b/app/templates/doctor/patient/prescription.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}DocCare | Assessment{% endblock title %}
+{% block title %}DocCare | Prescription{% endblock title %}
 {% block link %} 
     <link rel="stylesheet" href="{{ url_for('static', filename='doctor_style.css') }}">
 {% endblock %}
@@ -68,8 +68,10 @@
     </div>
 
     <main>
-        <form id="prescriptionForm" action="{{ url_for('doctor.prescription') }}">
-        <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
+        <form action="{{ url_for('doctor.prescription', assessment_id=consultation[0], patient_id=patient[0]) }}"  method="POST">
+            {{ PatientForm.csrf_token }}
+            
+            <!-- NAVBAR AND TABS FOR PATIENT RECORDS -->
             <div class="navbar">
                 <ul class="nav nav-underline">
                     <a class="back-icon" href="{{ url_for('doctor.consultation', patient_id=patient_id) }}">
@@ -148,76 +150,113 @@
                 
                     <!-- PRESCRIPTION -->
                     <div class="prescription-container" id="prescriptionContainer" style="display: none;">
-                        
+                        <div class="p_row prescriptionA">
+                            <div class="inputBox prescription">
+                                <input type="text" name="medication_name" required>
+                                <span>MEDICINE</span>
+                            </div>
+                            <div class="inputBox dosage">
+                                <input type="text" name="dosage" required>
+                                <span>DOSAGE</span>
+                            </div>
+                        </div>
+                        <div class="p_row prescription">
+                            <div class="inputBox quantity">
+                                <input type="text" name="quantity" required>
+                                <span>QUANTITY</span>
+                            </div>
+                            <div class="inputBox prescription">
+                                <input type="text" name="duration" required>
+                                <span>DURATION</span>
+                            </div>
+                        </div>
+                        <div class="p_row prescription">
+                            <div class="inputBox p_instructions">
+                                <input type="text" name="instructions" required>
+                                <span>INSTRUCTIONS</span>
+                            </div>
+                        </div>
                     </div>
-
-                    <table class="prescription-table" id="prescriptionTable">
-                        <tbody>
-                            {% for prescription in prescriptions %}
-                                <tr>
-                                    <td colspan="5" style="text-align: left;">{{ prescription[0] }} {{ prescription[1] }}<br>
-                                        {{ prescription[2] }}<br>
-                                        {{ prescription[3] }}<br>
-                                        {{ prescription[4] }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
 
                     <div class="btn-container">
-                        <button type="button" class="btn-prescription" id="addButton" style="display: none;">+ ADD PRESCRIPTION</button>
+                        <button class="btn-submit" id="submitData" type="submit" style="display: none;">SUBMIT</button>
                     </div>
+
+                    <!-- DISPLAY PRESCRIPTION DATA -->
+                    <div id="gridContainer" class="grid_container prescription">
+                        <center>
+                            <div class="grid_item prescription grid1">
+                                <center>
+                                    <table class="prescription_table" id="prescriptionTable">
+                                        <tbody>
+                                            {% for prescription in prescriptions %}
+                                                <tr>
+                                                    <td colspan="5" style="text-align: left;">{{ prescription[0] }} {{ prescription[1] }}<br>
+                                                        {{ prescription[2] }}<br>
+                                                        {{ prescription[3] }}<br>
+                                                        {{ prescription[4] }}
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </center>
+                            </div>
     
-                    <div class="btn-container">
-                        <button class="btn-submit" id="submitData" type="button" style="display: none;">SUBMIT</button>
+                            <div class="grid_item prescription">
+                                <center>
+                                    <div class="foot">
+                                        <div class="page_break"></div>
+                                        <h4 class="doctor">{{ doctor[0] }} {{ doctor[1] }}, MD, FPPS</h4>
+                                        <h4 class="license">License No. <p style="text-decoration:underline;"> 84303</p> </h4>
+                                    </div>
+                                </center>
+                            </div>
+                        </center>
                     </div>
 
-                    <div class="foot">
-                        <div class="page-break"></div>
-                        <h4 class="doctor">{{ doctor[0] }} {{ doctor[1] }}, MD, FPPS</h4>
-                        <h4 class="license">License No. <p style="text-decoration:underline;"> 84303</p> </h4>
-                    </div>
                 </center>
             </div>
         </form>
     </main>
 
-    <div id="successModal" class="modal" style="display: none;">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5">Success</h1>
-                </div>
-                <div class="modal-body">
-                    Prescription added successfully!
-                </div>
-                <a href="{{ url_for('doctor.prescription', assessment_id=consultation[0], patient_id=patient[0]) }}"> 
-                    <div class="modal-footer">
-                        <button type="button" class="btn-done">DONE</button>
+    {% if success %}
+        <div id="successModal" class="modal" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">Success</h1>
                     </div>
-                </a>
+                    <div class="modal-body">
+                        Prescription added successfully!
+                    </div>
+                    <a href="{{ url_for('doctor.prescription', assessment_id=consultation[0], patient_id=patient[0]) }}"> 
+                        <div class="modal-footer">
+                            <button type="button" class="btn-done">OKAY</button>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div id="errorModal" class="modal" style="display: none;">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5">Error</h1>
-                </div>
-                <div class="modal-body">
-                    Error in adding prescription.
-                </div>
-                <a href="{{ url_for('doctor.prescription', assessment_id=consultation[0], patient_id=patient[0]) }}">
-                    <div class="modal-footer">
-                        <button type="button" class="btn-done">OKAY</button>
+    {% elif error %}
+        <div id="errorModal" class="modal" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5">Error</h1>
                     </div>
-                </a>
+                    <div class="modal-body">
+                        Error in adding prescription. Please try again.
+                    </div>
+                    <a href="{{ url_for('doctor.prescription', assessment_id=consultation[0], patient_id=patient[0]) }}">
+                        <div class="modal-footer">
+                            <button type="button" class="btn-done">OKAY</button>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 
     <script>
         // CURRENT DATE
@@ -242,21 +281,18 @@
             const header = document.querySelector('#p_header');
             header.style.display = 'flex';
 
-            const addPrescription = document.querySelector('#addButton');
-            addPrescription.style.display = 'block';
-
             const submitButton = document.querySelector('#submitData');
             submitButton.style.display = 'block';
 
             const printButton = document.querySelector('#printButton');
             printButton.style.display = 'none';
 
-            const prescriptionTable = document.querySelector('#prescriptionTable');
-            prescriptionTable.style.display = 'none';
-
             const prescriptions = document.querySelector('#prescriptionContainer');
             prescriptions.style.display = 'block';
 
+            const gridContainer = document.querySelector('#gridContainer');
+            gridContainer.style.display = 'none';
+            
             const editIcon = document.getElementById('editIcon');
             editIcon.src = "{{ url_for('static', filename='images/Cancel-icon.png') }}";
             editIcon.setAttribute('onclick', 'disableEdit()'); 
@@ -266,147 +302,22 @@
             const header = document.querySelector('#p_header');
             header.style.display = 'none';
 
-            const addPrescription = document.querySelector('#addButton');
-            addPrescription.style.display = 'none';
-
             const submitButton = document.querySelector('#submitData');
             submitButton.style.display = 'none';
 
             const printButton = document.querySelector('#printButton');
             printButton.style.display = 'block';
 
-            const prescriptionTable = document.querySelector('#prescriptionTable');
-            prescriptionTable.style.display = 'block';
-
             const prescriptions = document.querySelector('#prescriptionContainer');
             prescriptions.style.display = 'none';
+
+            const gridContainer = document.querySelector('#gridContainer');
+            gridContainer.style.display = 'block';
 
             const editIcon = document.getElementById('editIcon');
             editIcon.src = "{{ url_for('static', filename='images/Edit-icon.png') }}";
             editIcon.setAttribute('onclick', 'enableEdit()');
         }
-
-        // ADD PRESCRIPTION
-        const addPrescriptionBtn = document.querySelector('.btn-prescription');
-        const prescriptionContainer = document.querySelector('.prescription-container');
-        let prescriptionCount = 0;
-
-        function createPrescription() {
-            if (prescriptionCount < 3) { 
-                const newPrescription = document.createElement('div');
-                newPrescription.classList.add('prescription-section');
-                newPrescription.innerHTML = `
-                    <div class="p_row prescriptionA">
-                        <div class="inputBox prescription">
-                            <input type="text" name="medication_name" required>
-                            <span>MEDICINE</span>
-                        </div>
-                        <div class="inputBox dosage">
-                            <input type="text" name="dosage" required>
-                            <span>DOSAGE</span>
-                        </div>
-                    </div>
-                    <div class="p_row prescription">
-                        <div class="inputBox quantity">
-                            <input type="text" name="quantity" required>
-                            <span>QUANTITY</span>
-                        </div>
-                        <div class="inputBox prescription">
-                            <input type="text" name="duration" required>
-                            <span>DURATION</span>
-                        </div>
-                    </div>
-                    <div class="p_row prescription">
-                        <div class="inputBox p_instructions">
-                            <input type="text" name="instructions" required>
-                            <span>INSTRUCTIONS</span>
-                        </div>
-                        <button class="btn-submit remove" type="button">REMOVE</button>
-                    </div>
-                `;
-                prescriptionContainer.appendChild(newPrescription);
-
-                const removeButton = newPrescription.querySelector('.remove');
-                removeButton.addEventListener('click', function () {
-                    newPrescription.remove(); 
-                });
-                prescriptionCount++;
-            } else {
-                console.log('Maximum limit of prescriptions reached (3 allowed).');
-                alert('Maximum limit of prescriptions reached (3 allowed). Please add any additional prescriptions later after submission.');
-            }
-        }
-
-        addPrescriptionBtn.addEventListener('click', createPrescription);
-        
-       // GET THE PRESCRIPTION INPUTS
-       function getPrescriptionInputs() {
-            const prescriptionSections = document.querySelectorAll('.prescription-section');
-        
-            const prescriptions = [];
-        
-            prescriptionSections.forEach(section => {
-                const medicationName = section.querySelector('input[name="medication_name"]').value;
-                const dosage = section.querySelector('input[name="dosage"]').value;
-                const quantity = section.querySelector('input[name="quantity"]').value;
-                const duration = section.querySelector('input[name="duration"]').value;
-                const instructions = section.querySelector('input[name="instructions"]').value;
-        
-                const prescription = {
-                    medicationName,
-                    dosage,
-                    quantity,
-                    duration,
-                    instructions
-                };
-                prescriptions.push(prescription);
-            });
-        
-            return prescriptions;
-        }
-    
-        function sendPrescriptionData() {
-            const prescriptions = getPrescriptionInputs(); 
-            var assessmentId = document.querySelector('input[name="assessment_id"][hidden]').value;
-            var patientId = document.querySelector('input[name="patient_id"][hidden]').value;
-            console.log('assessment ID:', assessmentId);
-            console.log('patient ID:', patientId);
-            
-            var dataToFetch = {
-                assessment_id: assessmentId,
-                patient_id: patientId,
-                prescriptions: prescriptions,
-            };
-
-            fetch('/doctor/prescription/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(dataToFetch)
-            })
-            .then(response => { 
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json(); 
-            })
-            .then(data => {
-                if (data.success) {
-                    document.getElementById('successModal').style.display = 'block';
-                } else {
-                    document.getElementById('errorModal').style.display = 'block';
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-
-        const submitButton = document.getElementById('submitData');
-        submitButton.addEventListener('click', function() {
-            sendPrescriptionData();
-        });
     </script>
     
 {% endblock %}
